--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,16 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
-    "declaration": true,
+    "target" : "es6",
     "module": "commonjs",
-    "moduleResolution": "node",
-    "noImplicitAny": true,
-    "outDir": "./lib",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "removeComments": false,
+    "noImplicitAny": false,
     "preserveConstEnums": true,
-    "removeComments": true
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "outDir": "./lib"
   },
   "include": [
     "src/**/*"
