Update package info

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "hubot-chat-radar",
   "license": "MIT",
   "repository": "",
-  "author": "",
+  "author": "Black Roland (https://github.com/black-roland)",
   "keywords": [
     ""
   ],
